Fix all spacing issues and added extra todo

--- a/app.css
+++ b/app.css
@@ -17,15 +17,14 @@ body {
 }
 
 .content-header {
-  font-size: 80px;
+  font-size: 60px;
   font-weight: 300;
 }
 
 .content-header__sub {
-  margin-top: -20px;
+  margin-top: -25px;
   font-size: 20px;
   font-weight: 500;
-  letter-spacing: 5px;
 }
 .text-effect > .text {
   border-right: 0.2rem solid black;
@@ -43,7 +42,7 @@ body {
 
 @media (min-width: 1200px) {
   .content-header {
-    font-size: 105px;
+    font-size: 65px;
   }
 
   .content-header__sub {
